<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/busflow_video_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:background="@color/bblueblack">
        
        <ImageView
	        android:id="@+id/busflow_video_imageView_return"
	       android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/busflow_video_button_prob"
	        android:layout_alignTop="@+id/busflow_video_button_prob"
	        android:layout_toLeftOf="@+id/busflow_video_button_param"
	        android:layout_alignParentStart="true"
       		android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:src="@drawable/returnp" />
	     
	    <Button
	        android:id="@+id/busflow_video_button_prob"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:text="@string/business_pro"
	        android:background="@color/bblueblack"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:textColor="@color/darkgray"/>
	    
	    <Button
	        android:id="@+id/busflow_video_button_param"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@+id/busflow_video_button_prob"
	        android:background="@color/bblueblack"
	        android:text="@string/business_param"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:textColor="@color/darkgray"/>
	
	    <Button
	        android:id="@+id/busflow_video_button_video"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/busflow_video_button_prob"
	        android:background="@color/bblueblack"
	        android:text="@string/business_video"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
     </RelativeLayout>
    
    <TextView
        android:id="@+id/busflow_video_textView_prolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/busflow_video_buttons"
        android:background="@color/aqua"
        android:gravity="center_horizontal"
        android:text="@string/business_list"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
         android:id="@+id/busflow_video_flow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/busflow_video_textView_prolist"
         android:background="@color/ivory"
         android:orientation="horizontal" >
         
         <TextView
	         android:id="@+id/busflow_video_textView_flowtime"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"         
	         android:layout_toLeftOf="@+id/busflow_video_textView_flowdesp"
	         android:layout_weight="1"
	         android:layout_marginLeft="30dp"
	         android:text="@string/time"
	         android:textAppearance="?android:attr/textAppearanceLarge" />
	     
	     <TextView
	         android:id="@+id/busflow_video_textView_flowdesp"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_marginRight="30dp"
	         android:layout_weight="4"
	         android:text="@string/desp"
	         android:textAppearance="?android:attr/textAppearanceMedium" />
	    
    </LinearLayout>
    
    <ImageView
        android:id="@+id/busflow_video_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/busflow_video_button_paizhao"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/busflow_video_flow"
        android:src="@drawable/kongbai" />
    
    <VideoView
        android:id="@+id/busflow_video_videoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/busflow_video_button_paizhao"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/busflow_video_flow"
        android:src="@drawable/kongbai" />

    <Button
        android:id="@+id/busflow_video_button_start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:text="@string/busflow_video_start" />
    
    <Button
        android:id="@+id/busflow_video_button_paizhao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/busflow_video_button_start"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:text="@string/busflow_video_paizhao" />
    
    <Button
        android:id="@+id/busflow_video_button_shexiang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/busflow_video_button_paizhao"
        android:layout_toRightOf="@+id/busflow_video_button_paizhao"
        android:background="@color/white"
        android:text="@string/busflow_video_shexiang" />

    <Button
        android:id="@+id/busflow_video_button_chakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/busflow_video_button_start"
        android:layout_toLeftOf="@+id/busflow_video_button_paizhao"
        android:background="@color/white"
        android:text="@string/busflow_video_chakan" />

</RelativeLayout>